stripped out about page

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -3,54 +3,10 @@
 <head>
   <title>My First HTML</title>
   <meta charset="UTF-8">
-<!--  <link rel="stylesheet" href="styles.css"> -->
 </head>
 
-<body style="background-color:powderblue;">
+<body>
   <%= link_to 'Home', root_path %>
-<br>
-<%= link_to image_tag('my_face.jpeg'), 'https://www.linkedin.com/in/joshnabrown' %>
-<%= image_tag 'my_face.jpeg' %>
-<h1>I stopped at HTML Links, so I can go back and finish if needed</h1><br>
-
-<h1>This is a Heading</h1>
-<p>This is a paragraph.</p>
-<p>This is another paragraph.</p>
-<b>This text is bold</b><br>
-<strong>This text is strong</strong><br>
-<i>This text is italic</i><br>
-<em>This text is emphasized</em>
-<h2>HTML <small>Small</small> Formatting</h2>
-<h2>HTML <mark>Marked</mark> Formatting</h2>
-<p>My favorite color is <del>blue</del> red.</p>
-<p>My favorite <ins>color</ins> is red.</p>
-<p>This is <sub>subscripted</sub> text.</p>
-<p>This is <sup>superscripted</sup> text.</p>
-<p>WWF's goal is to: <q>Build a future where people live in harmony with nature.</q></p>
-<p>The <abbr title="World Health Organization">WHO</abbr> was founded in 1948.</p>
-
-<!-- Write your comments here -->
-
-<h1>This is the about page!!!</h1>
-
-<h1 style="text-align:center;">Centered Heading 1</h1>
-<h2>Heading 2</h2>
-<h3>Heading 3</h3>
-<h4>Heading 4</h4>
-<h5>Heading 5</h5>
-<h6>Heading 6</h6>
-
-<h1 style="font-size:60px;">60px Heading 1</h1>
-<h1 style="font-size:300%;">This is a 300% heading</h1>
-
-
-<button>Click me</button>
-
-<a href="https://www.w3schools.com">This is a link</a>
-<br>
-<img src="https://www.w3schools.com/html/w3schools.jpg"
-  alt="W3Schools.com" width="104" height="142">
-<br>
 
 </body>
 </html>
