--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -15,6 +15,8 @@
 
 
 <body style="background-color:powderblue;">
+
+<%= link_to 'Aplha Blog', articles_path %> |
 <%= link_to 'About', about_path %>
 
 <ul>
