--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,4 +1,4 @@
-$navbar-default-bg: #162252;
+$navbar-default-bg: black;
 
 @import "bootstrap-sprockets";
 @import "bootstrap";
@@ -16,5 +16,59 @@ $navbar-default-bg: #162252;
 #logo:hover {
   color: #fff;
   text-decoration: none;
+}
 
+.center {
+  text-align: center;
+}
+
+.jumbotron {
+  background-image: asset-url('rough_just_logo.png');
+  background-size: auto;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-position: center;
+  height: 550px;
+}
+
+.btn-xlarge {
+  font-size: 1.7em;
+  background-color: black;
+}
+
+.jumbotron h1 {
+  color: #ffd700;
+  text-align: center;
+  margin-top: -35px;
+  margin-bottom: 30px;
+  letter-spacing: -1px;
+  font-weight: bold;
+}
+
+.button {
+  margin-left:-220px;
+}
+
+footer {
+  margin-top: 45px;
+  padding-top: 5px;
+  border-top: 1px solid #eaeaea;
+  color: #777;
+}
+
+footer a:hover {
+  color: #222;
+}
+
+footer small {
+  float: left;
+}
+footer ul {
+  float: right;
+  list-style: none;
+}
+
+footer ul li {
+  float: left;
+  margin-left: 15px;
 }
