--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Listing all articles</h1>
+<h1>Listing all Articles</h1>
 <p>
 <%= link_to "Create new article", new_article_path %>
 </p>
@@ -14,7 +14,7 @@
       <td><%= article.description %></td>
       <td><%= link_to 'Edit', edit_article_path(article) %></td>
       <td><%= link_to 'Show', article_path(article) %></td>
-      <td><%= link_to 'Delete', article_path(article), method: :delete, data: {confirm: "Are your sure"} %></td> 
+      <td><%= link_to 'Delete', article_path(article), method: :delete, data: {confirm: "Are your sure"} %></td>
     </tr>
     <% end %>
 </table>
