--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,82 +1,4 @@
-<!DOCTYPE html>
-<html lang="en-US">
-<head>
-  <title>My First HTML</title>
-  <meta charset="UTF-8">
-<!--  <link rel="stylesheet" href="styles.css"> -->
-</head>
-<!--
-<style>
-    body {background-color: powderblue;}
-    h1   {color: blue;}
-    p    {color: red;}
-</style>
--->
-
-
-<body style="background-color:powderblue;">
-
-<%= link_to 'Aplha Blog', articles_path %> |
-<%= link_to 'About', about_path %>
-
-<ul>
-  <li>Coffee</li>
-  <li>Tea</li>
-  <li>Milk</li>
-</ul>
-
-<ol>
-  <li>Coffee</li>
-  <li>Tea</li>
-  <li>Milk</li>
-</ol>
-
-<p>This is a <br> paragraph with a line break.</p>
-
-<p style="color:red">This is a red paragraph.</p>
-
-<p title="I'm a tooltip">
-This is a paragraph.
-</p>
-
-<h1 style="font-family:verdana;">This is a verdana heading</h1>
-<p>This is some text.</p>
-<hr>
-<h2>This is heading 2</h2>
-<p>This is some other text.</p>
-<hr>
-
-<pre>
-  My Bonnie lies over the ocean.
-
-  My Bonnie lies over the sea.
-
-  My Bonnie lies over the ocean.
-
-  Oh, bring back my Bonnie to me.
-</pre>
-
-<p>Here is a quote from WWF's website:</p>
-<blockquote cite="http://www.worldwildlife.org/who/index.html">
-For 50 years, WWF has been protecting the future of nature.
-The world's leading conservation organization,
-WWF works in 100 countries and is supported by
-1.2 million members in the United States and
-close to 5 million globally.
-</blockquote>
-
-<address>
-Written by John Doe.<br>
-Visit us at:<br>
-Example.com<br>
-Box 564, Disneyland<br>
-USA
-</address>
-
-<p><cite>The Scream</cite> by Edvard Munch. Painted in 1893.</p>
-
-<bdo dir="rtl">This text will be written from right to left</bdo>
-
-
-</body>
-</html>
+<div class="center jumbotron">
+  <h1>ALPHA BLOG</h1>
+  <%= link_to "Sign up now", "#", class: "btn btn-primary btn-lg btn-xlarge button" %>
+</div>
