--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,6 +1,6 @@
 <h2 align="center">  Title: <%= @article.title %></h2>
 <div class="well col-xs-8 col-xs-offset-2">
-  <h4 class="center description"><strong>Desctiption:</strong></h2>
+  <h4 class="center description"><strong>Desctiption:</strong></h4>
     <hr>
     <%= simple_format(@article.description) %>
     <div class="article-actions">
@@ -8,6 +8,6 @@
       <%= link_to "Delete thsi article", article_path(@article), method: :delete,
                                         data: {confirm: "Are you sure you want to delete the article?"},
                                         class: "btn btn-xs btn-danger" %>
-      <%= link_to "View all articles", article_path, class: "btn btn-xs btn-success" %>
+      <%= link_to "View all articles", articles_path, class: "btn btn-xs btn-success" %>
     </div>
 </div>
