--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -16,11 +16,10 @@
       <ul class="nav navbar-nav">
         <li><%= link_to "Articles", articles_path %></li>
         <li><a href="#">Link</a></li>
-        <li><%= link_to "New Article", new_article_path %></li>
-        <!-- <li class="dropdown">
+        <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Actions <span class="caret"></span></a>
           <ul class="dropdown-menu">
-
+            <li><%= link_to "New Article", new_article_path %></li>
             <li><a href="#">Another action</a></li>
             <li><a href="#">Something else here</a></li>
             <li role="separator" class="divider"></li>
@@ -28,7 +27,7 @@
             <li role="separator" class="divider"></li>
             <li><a href="#">One more separated link</a></li>
           </ul>
-        </li> -->
+        </li>
       </ul>
       <form class="navbar-form navbar-left">
         <div class="form-group">
