--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,5 +1,6 @@
 <h1 align="center">All Alpha Blogers</h1>
 <div align="center">
+  <%= will_paginate %>
   <% @users.each do |user| %>
     <ul class="listing">
       <div class="row">
@@ -12,4 +13,6 @@
         </div>
       </div>
     </ul>
-<% end %>
+  <% end %>
+  <%= will_paginate %>
+</div>
