Fixed CSS for ul, and error when viewing users unlogged in

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -75,10 +75,9 @@ $navbar-default-bg: black;
 }
 
 .listing {
-  list-style: none;
+  list-style-type: none;
   padding-left: 0;
 }
-
 
 footer {
   margin-top: 45px;
