--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -38,10 +38,9 @@
         <button type="submit" class="btn btn-default">Submit</button>
       </form>
       <ul class="nav navbar-nav navbar-right">
-        <% if logged_in?%>
-          <li><%= link_to 'Log out', logout_path, method: :delete %></li>
+        <% if logged_in? %>
           <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Your Profile <%= "Admin" if current_user.admin? %><span class="caret"></span></a>
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><%= current_user.username %><%= "- Admin" if current_user.admin? %><span class="caret"></span></a>
             <ul class="dropdown-menu">
               <li><%= link_to "Edit your profile", edit_user_path(current_user) %></li>
               <li><%= link_to "View your profile", user_path(current_user) %></li>
@@ -50,6 +49,7 @@
               <li><a href="#">Separated link</a></li>
             </ul>
           </li>
+          <li><%= link_to 'Log out', logout_path, method: :delete %></li>
           <% else %>
             <li><%= link_to 'Login', login_path %></li>
             <li><%= link_to 'Sign up', signup_path %></li>
