--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -18,7 +18,7 @@
         <li><%= link_to "Users", users_path %></li>
         <% if logged_in? %>
           <li class="dropdown">
-            <a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Actions <span class="caret"></span></a>
+            <a class="nav-link dropdown-toggle" data-toggle="dropdown" href id="navbarDropdownMenuLink" role="button" aria-haspopup="true" aria-expanded="false">Actions <span class="caret"></span></a>
             <ul class="dropdown-menu">
               <li><%= link_to "New Article", new_article_path %></li>
               <li><a href="#">Another action</a></li>
