still trying to fix dropdowns in nav bar

--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -19,7 +19,7 @@
         <% if logged_in? %>
           <li class="dropdown">
             <a class="nav-link dropdown-toggle" data-toggle="dropdown" href id="navbarDropdownMenuLink" role="button" aria-haspopup="true" aria-expanded="false">Actions <span class="caret"></span></a>
-            <ul class="dropdown-menu">
+            <ul class="nav-link dropdown-menu">
               <li><%= link_to "New Article", new_article_path %></li>
               <li><a href="#">Another action</a></li>
               <li><a href="#">Something else here</a></li>
